--- a/Pages/Students/Edit.cshtml
+++ b/Pages/Students/Edit.cshtml
@@ -25,13 +25,9 @@
                 <span asp-validation-for="Student.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" /> | 
+                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
