--- a/Pages/Premiums/Details.cshtml
+++ b/Pages/Premiums/Details.cshtml
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Premium.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-success" asp-page="./Edit" asp-route-id="@Model.Premium.Id">Edit</a> |
+    <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
 </div>
