--- a/Pages/Premiums/Edit.cshtml
+++ b/Pages/Premiums/Edit.cshtml
@@ -35,13 +35,10 @@
                 <span asp-validation-for="Premium.StudentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" /> | 
+                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
