--- a/Pages/Students/Delete.cshtml
+++ b/Pages/Students/Delete.cshtml
@@ -7,9 +7,8 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete this?</h4>
 <div>
-    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,6 +28,6 @@
     <form method="post">
         <input type="hidden" asp-for="Student.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
     </form>
 </div>
