--- a/Pages/Students/Details.cshtml
+++ b/Pages/Students/Details.cshtml
@@ -26,6 +26,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Student.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-success" asp-page="./Edit" asp-route-id="@Model.Student.Id">Edit</a> |
+    <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
 </div>
